src/client/components/setting-panel/list.styl
.item-list-wrap
  overflow-y scroll
  &::-webkit-scrollbar
    width 0
.list-item-edit
.list-item-apply
.list-item-remove
.list-item-bookmark
  display none
  width 24px
  line-height 35px
  text-align center
  position absolute
  right 0
  top 0

.list-item-title
  flex-grow: 1
.item-list-unit
  display flex
  position relative
  margin-bottom 1px
  cursor pointer
  line-height 1.8
  &.active
    background var(--primary)
    color var(--primary-contrast)
  &.current
    font-weight bold
  &:hover
    background var(--primary)
    color var(--primary-contrast)
    .list-item-apply
    .list-item-edit
    .list-item-remove
    .list-item-bookmark
      display block
// .item-list
//   .list-item-edit
//   .list-item-apply
//     right 20px
.item-list-unit
  .list-item-bookmark
    right 18px

